# plain-starter-app

./: .devcontainer.json  .env.example  .gitignore  README.md  pyproject.toml  tailwind.config.js  tailwind.css
.github/workflows/: test.yml
app/: middleware.py  settings.py  urls.py  views.py
app/templates/: 404.html  500.html  base.html  error.html  home.html  index.html  login.html  signup.html
app/users/: admin.py  cli.py  models.py  urls.py
app/users/migrations/: 0001_initial.py  0002_user_time_zone.py  0003_alter_user_email.py
app/users/templates/admin/users/: user_form.html
app/users/templates/staff/users/: user_form.html
tests/: test_urls.py
